# GooseLLM

./: .dockerignore  .gitignore  AGENTS.md  FA2_INTEGRATION.md  OPEN_SOURCE_SM70_GUIDE.md  README.md  debug_vllm_hang.py  launch_test.sh  pyproject.toml  run_offline.py  run_server.sh  setup.py  test_client.py
.opencode/plans/: 0005_dflash_root_cause.md  0006_dflash_recovery_plan.md  0007_fc_weight_shape_debug.md
csrc/: custom_all_reduce.cuh
csrc/attention/: turbomind_sm70_decode.cu  turbomind_sm70_decode_bindings.cpp
csrc/flash_attention_v100/: AUTHORS  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh  setup.py  test.py  test_dflash.py  test_gdn_prefill.py  test_out.txt  test_paged_prefill.py
csrc/flash_attention_v100/benchmarks/: benchmark_unsloth.py
csrc/flash_attention_v100/docs/: attention.md  plan_m8n8k4_rewrite.md  volta.md
csrc/flash_attention_v100/flash_attn/: __init__.py  flash_attn_interface.py
csrc/flash_attention_v100/flash_attn_v100/: __init__.py  flash_attn_interface.py
csrc/flash_attention_v100/include/: 00_volta_const.cuh  01_backward_config.cuh  01_forward_config.cuh  02_wmma.cuh  fused_mha.h  fused_mma.h
csrc/flash_attention_v100/kernel/: fused_mha.h  fused_mha_api.cpp  fused_mha_backward.cu  fused_mha_forward.cu  fused_mha_paged_forward.cu
docker/: Dockerfile.sm70-build  Dockerfile.sm70-wheel
docs/: plan_phase3_gqa_grid.md
research/spark-m8n8k4/: 03_wmma_spark.cuh  04_mma_m8n8k4.cuh
tests/: test_sm70_decode.py
vllm/: _custom_ops.py.backup
vllm/config/: load.py  speculative.py
vllm/v1/: utils.py
(+22 files in other folders)
